update the file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=springcourse
+
+spring.datasource.url = jdbc:mysql://localhost:3306/collegedb
+spring.datasource.username = root
+spring.datasource.password = priyanshu
+sping.datasource.driver-class-name = com.mysql.cj.jdbc.driver
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql= true
+spring.jpa.database-platform= org.hibernate.dialect.MySQLDialect
